Change button color of logInButtons

--- a/client/modules/accounts/configs/styles.less
+++ b/client/modules/accounts/configs/styles.less
@@ -49,7 +49,7 @@
 //////////////////// LOGIN BUTTONS
 
 @login-buttons-accounts-dialog-width: 250px;
-@login-buttons-color: #0088EE;
+@login-buttons-color: darken(#0088EE, 10%);
 @login-buttons-color-border: darken(@login-buttons-color, 10%);
 @login-buttons-color-active: lighten(@login-buttons-color, 10%);
 @login-buttons-color-active-border: darken(@login-buttons-color-active, 10%);
